--- a/Lex_Yacc/Dockerfile
+++ b/Lex_Yacc/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:latest
+FROM debian:bookworm-slim
 
 RUN apt-get update -y \
   && apt-get install -y --no-install-recommends build-essential bison flex \
